Reset backend to match origin/main, i for some reason thought I cloned branch from club endpoints branch with that backend. While preserving the front end I pushed yesterday with the mock data updates.
