# backend/internal/api/handlers/defs.go
@@ -8,11 +8,6 @@ type SuccessResponse struct {
 	Message string `json:"message"`
 }
 
-type CreatedResponse struct {
-	Message string `json:"message"`
-	ID      string `json:"id"`
-}
-
 type SuccessfulLoginResponse struct {
 	Message string `json:"message"`
 	Token   string `json:"token"`
