# backend/internal/api/routes/routes.go
@@ -12,29 +12,16 @@ import (
 func SetupServicesAndRoutes(app *fiber.App, querier repository.Querier) {
 	authService := services.NewAuthService()
 	userService := services.NewUserService(querier, authService)
-	clubService := services.NewClubService(querier)
 
 	app.Use(logger.New(logger.Config{
-		Format: "${time} [${ip}]:${port} ${status} - ${method} ${path} ${error}​\n",
+		// For more options, see the Config section
+		Format: "${time} [${ip}]:${port} ${locals:requestid} ${status} - ${method} ${path} ${error}​\n",
 	}))
-
-	// Public routes
 	app.Get("/api/version", handlers.Version())
 	app.Post("/api/register", handlers.RegisterUser(userService))
 	app.Post("/api/login", handlers.LoginUser(userService))
-
-	// Protected routes
-	api := app.Group("/api", middleware.ProtectedRoute(authService))
-	api.Get("/user", handlers.GetUser(userService))
-	api.Put("/user", handlers.UpdateUser(userService))
-	api.Get("/user/clubs", handlers.GetUserClubs(userService))
-
-	api.Post("/club", handlers.CreateClub(clubService))
-	api.Get("/clubs", handlers.GetPublicClubs(clubService))
-	api.Post("/club/:club_id/join", handlers.JoinClub(clubService))
-	api.Post("/club/:club_id/leave", handlers.LeaveClub(clubService))
-	api.Get("/club/:club_id", handlers.GetClub(clubService)) //for some reason says its not properly declared? maybe a me issue from needing to revert backend to this timeframe. Update: apparently the club_handler.go was out of date by 60 lines in my local copy in this branch which i started from the club endpoints branch or main at the time i think
-	api.Delete("/club/:club_id", handlers.DeleteClub(clubService))
-	api.Put("/club/:club_id", handlers.UpdateClub(clubService))
-	api.Get("/club/:club_id/leaderboard", handlers.GetClubLeaderboard(clubService))
+	// Authenticated / Authorized routes:
+	app.Group("/api", middleware.ProtectedRoute(authService))
+	app.Get("/api/user", handlers.GetUser(userService))
+	app.Put("/api/user", handlers.UpdateUser(userService))
 }
